--- a/link-apk1.html
+++ b/link-apk1.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<button onclick="location.href='link2.html'"></button>
+<button onclick="location.href='link-apk2.html'">KLIK LINK UNTUK LANJUT</button>
 </body>
 </html>
