--- a/link-key1.html
+++ b/link-key1.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<button onclick="location.href='link1.html'"></button>
+<button onclick="location.href='link-key2.html'">KLIK LINK UNTUK MELANJUTKAN</button>
 </body>
 </html>
