--- a/link-key2.html
+++ b/link-key2.html
@@ -1,5 +1,4 @@
 <html>
-<body>
-<button onclick="location.href='index.html'"></button>
+<body onload="https://pastebin.com/raw/nv4c3ryV">
 </body>
 </html>
