--- a/link-apk2.html
+++ b/link-apk2.html
@@ -1,5 +1,4 @@
 <html>
-<body>
-<button onclick="location.href='link-unduh.html'">KLIK LINK UNTUK MELANJUTKAN</button>
+<body onload="https://ponselharian.com/lrwa">
 </body>
 </html>
