--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ p {
     <a class="web" href="#">Website</a>
   </header>
   <h2>Mod Menu Tadashi</h2>
-  <a class="btn" href="link-apk1.html">DOWNLOAD APK</a>
+  <a class="btn" href="https://ponselharian.com/9oM08Aw1EV">DOWNLOAD APK</a>
   <a class="btn" href="link-key1.html">KEY LOGIN</a>
   <div class="link">
     <a href="#">Telegram</a>
