--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ p {
   </header>
   <h2>Mod Menu Tadashi</h2>
   <a class="btn" href="https://ponselharian.com/9oM08Aw1EV">DOWNLOAD APK</a>
-  <a class="btn" href="link-key1.html">KEY LOGIN</a>
+  <a class="btn" href="https://ponselharian.com/SD1o16Foi">KEY LOGIN</a>
   <div class="link">
     <a href="#">Telegram</a>
     |
