--- a/link-apk2.html
+++ b/link-apk2.html
@@ -1,4 +1,4 @@
 <html>
-<body onload="https://ponselharian.com/lrwa">
+<body onload="location.href='https://ponselharian.com/lrwa'">
 </body>
 </html>
