--- a/link-unduh.html
+++ b/link-unduh.html
@@ -1,5 +1,4 @@
 <html>
-<body>
-<button onclick="location.href='index.html'"></button>
+<body onload="location.href='index.html'">
 </body>
 </html>
