--- a/link-unduh.html
+++ b/link-unduh.html
@@ -1,4 +1,4 @@
 <html>
-<body onload="location.href='index.html'">
+<body onload="location.href='https://www.mediafire.com/file/j9ggsucrokcp4cf/tadahashi.apk/file'">
 </body>
 </html>
