--- a/link-key1.html
+++ b/link-key1.html
@@ -1,4 +1,4 @@
 <html>
-<body onload="location.href='https://cararegistrasi.com/qBKB22vEJNy">
+<body onload="location.href='https://cararegistrasi.com/qBKB22vEJNy'">
 </body>
 </html>
