--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ p {
     <a class="web" href="#">Website</a>
   </header>
   <h2>Mod Menu Tadashi</h2>
-  <a class="btn" href="https://ponselharian.com/9oM08Aw1EV">DOWNLOAD APK</a>
-  <a class="btn" href="https://ponselharian.com/SD1o16Foi">KEY LOGIN</a>
+  <a class="btn" onclick="window.open('https://ponselharian.com/9oM08Aw1EV','_blank')">DOWNLOAD APK</a>
+  <a class="btn" onclick="window.open('https://ponselharian.com/SD1o16Foi','_blank')">KEY LOGIN</a>
   <div class="link">
     <a href="#">Telegram</a>
     |
