--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Segawon Official</title>
+  <link href="logo.png" rel="shortcut icon">
 </head>
 <style>
 body {
